kubernetes/ingress-protected.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tallii-protected-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/whitelist-source-range: "142.114.52.103,198.251.52.214"
    nginx.ingress.kubernetes.io/auth-url: "http://tallii-auth-svc.default.svc.cluster.local/v1/authorize"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  rules:
  - host: "api.tallii.io"
    http:
      paths:
      - path: /profiles(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: tallii-profiles-svc
            port:
              number: 80
